# FrancumEngine

./: .gitignore  BuildGame.bat  CMakeLists.txt  InstallOpenGL.ps1  README.md  SetupProject.bat  build.bat
docs/: memos.md
res/: uvtemplate.dds
res/icon/: SetIcon.bat  appicon.rc
res/scripts/: test.lua
res/shaders/: AlbedoFragShader.frag  SimpleFragmentShader.frag  SimpleVertexShader.vert  StandardShadingShader.frag  StandardShadingShader.vert  TextureFragShader.frag  TextureVertShader.vert
setup/: InstallEngine.ps1  InstallLua.ps1  InstallOpenGL.ps1  resources.rc
src/: IndexBuffer.cpp  IndexBuffer.h  Inputs.h  Object.h  Renderer.cpp  Renderer.h  ScriptComponent.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  cubeBuffers.h  loadDDS.h  loadOBJ.h  loadShader.h  main.cpp  vboIndexer.h
